[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ParallaxBackground2.tscn" type="PackedScene" id=1]
[ext_resource path="res://assests/fonts/testfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assests/fonts/testfont2.tres" type="DynamicFont" id=3]
[ext_resource path="res://scenes/EndLevelScreen.gd" type="Script" id=4]
[ext_resource path="res://scenes/blur.tres" type="Material" id=5]

[node name="EndLevelScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground2" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.794
margin_top = 100.0
margin_right = 100.0
margin_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 212.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "Level END"
align = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 212.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 3 )
text = "Score:"
align = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
self_modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
material = ExtResource( 5 )
margin_top = 101.0
margin_right = 212.0
margin_bottom = 255.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer"]
self_modulate = Color( 0.686275, 0.686275, 0.686275, 1 )
margin_left = 7.0
margin_top = 7.0
margin_right = 205.0
margin_bottom = 147.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 198.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 3 )
text = "Next Level"
flat = true

[node name="Button2" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 198.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"
flat = true

[node name="Button3" type="Button" parent="VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 198.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = ExtResource( 3 )
text = "Exit"
flat = true
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="VBoxContainer/PanelContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
